--- a/seminar/flow_matching/original_first_try/main.tex
+++ b/seminar/flow_matching/original_first_try/main.tex
@@ -39,7 +39,7 @@
   style=authoryear,   % or numeric
   citestyle=authoryear
 ]{biblatex}
-\addbibresource{../../references.bib}
+\addbibresource{../../../references.bib}
 
 % Your custom commands (kept as is)
 \newcommand{\mrm}[1]{\mathrm{#1}}
@@ -47,6 +47,7 @@
 \newcommand{\mb}[1]{\mathbf{#1}}
 \newcommand{\mc}[1]{\mathcal{#1}}
 \newcommand{\tb}[1]{\textbf{#1}}
+\newcommand{\Unif}{\operatorname{Unif}}
 
 \title{Flow Matching for Generative Modeling}
 \author{Gwanwoo Choi}
@@ -85,7 +86,7 @@
     \includegraphics[width=0.75\textwidth]{DDPMExample.png}
   \end{figure}
 
-  \begin{block}{Diffusion Process (\cite{hoDenoisingDiffusionProbabilistic2020a})}
+  \begin{block}{Diffusion Process (\cite{hoDenoisingDiffusionProbabilistic2020})}
     \begin{itemize}
       \item In diffusion process, latent space becomes $x_T$ and data space becomes $x_0$ ($T$ is an arbitrary timestep)
       \item Rather than going directly from $x_T$ to $x_0$ at once, split the path in separate $T$ timesteps.
@@ -106,10 +107,46 @@
     $$
       \mbb{E}_{(x_T, x_{T-1}, \dots, x_0) \sim q} \left[ \underbrace{D_{\text{KL}}(q(x_T|x_0)|p(x_T))}_{L_T} + \sum_{t>1} \underbrace{D_{\text{KL}}(q(x_{t-1}|x_t,x_0)|p_\theta (x_{t-1}|x_t))}_{L_{t-1}} - \underbrace{\log p_{\theta} (x_0|x_1)}_{L_0} \right]
     $$
+
+    \begin{itemize}
+      \item In diffusion framework, the decoder is chosen by $p_\theta(x_{t-1}|x_t) \triangleq \mc{N}(\mu_{\theta}(x_t, t), \sigma^2_tI)$
+      \item Then we can calculate $D_{\text{KL}}(q(x_{t-1}|x_t, x_0)|p_\theta(x_{t-1}|x_t))$ since $q$ and $p$ are gaussian
+    \end{itemize}
+    Through some trick, more simpler form of loss function can be obtained, where $\epsilon_\theta$ is the noise predictor at timestep $t$.
+    $$
+    \mbb{E}_{\substack{
+    t \sim \operatorname{Unif}[1, T] \\
+    x_0 \sim \mc{D} \\
+    \epsilon \sim \mc{N}(0, I)}} \left[ \lVert \epsilon - \epsilon_\theta (\sqrt{\bar{\alpha}_t} x_0 + \sqrt{1 - \bar{\alpha}_t} \epsilon, t) \rVert^2 \right]
+    $$
   \end{block}
 \end{frame}
 
-\printbibliography
+\begin{frame}{VAE, Diffusion, FlowMatching}
+
+  \begin{columns}
+    \begin{column}{0.8\textwidth}
+      \begin{figure}
+        \includegraphics[width=0.95\textwidth]{FlowMatching1.png}
+      \end{figure}    
+    \end{column}
+    \begin{column}{0.2\textwidth}
+      \begin{figure}
+        \includegraphics[width=0.95\textwidth]{FlowMatching2.png}
+      \end{figure}
+    \end{column}
+  \end{columns}
+
+  \begin{block}{FlowMatching Loss (\cite{lipmanFlowMatchingGenerative2023})}
+    $$
+    \mc{L}(\theta) = \mbb{E}_{\substack{t \sim \Unif[0,1] \\ x_1 \sim q \\ x_0 \sim p}} \left[\lVert v_t(\psi_t(x_0)) - \left( x_1 - (1-\sigma_{\min})x_0\right)\rVert^2\right]
+    $$
+  \end{block}
+\end{frame}
+
+\begin{frame}{References}
+  \printbibliography
+\end{frame}
 
 \end{document}
 
